syntax = "proto3";

package stock_service;

import "google/protobuf/timestamp.proto";

option go_package="github.com/hossainemruz/go-samples/grpc-server-streaming/api";

service StockService{
    rpc StreamPrice(StreamPriceRequest) returns (stream StreamPriceResponse);
}

message StreamPriceRequest{
    string stock_symbol = 1;
}

message StreamPriceResponse{
    string stock_symbol = 1;
    float price = 2;
    google.protobuf.Timestamp timestamp = 3;
}
